--- a/src/app/layout/blog-two/blog-two.component.html
+++ b/src/app/layout/blog-two/blog-two.component.html
@@ -35,10 +35,8 @@
                                 <h2 class="Mdate"> 5 March 2022</h2>
                             </div>
                             <div fxLayout="columncd">
-
                                 <p>Sukumar’s Pushpa: The Rise shows promise when it wraps things up and sets up things
-                                    for
-                                    Pushpa 2.</p>
+                                    for Pushpa 2.</p>
                             </div>
                         </div>
                     </div>
@@ -71,10 +69,7 @@
                 <!-- <p class="smallDiscription" *ngFor="let paragraph of movie.paragraphs">
                     {{paragraph.para  | slice:0:222}}
                 </p> -->
-
             </div>
-
-
 
             <div class="category reviewmovieblogs" fxLayout="row">
                 <div class="category" fxLayout="column">
@@ -89,8 +84,7 @@
                                 <img src={{movie.imageThree}}></a>
                             <div class="review imgtwos">
                                 <!-- <a href={{movie.productLink}} target="_blank">
-                                        <img src={{movie.imageTwo}}></a> -->
-
+                              <img src={{movie.imageTwo}}></a> -->
                             </div>
                         </div>
                         <div class="heading-product" fxFlex="60%">
@@ -124,10 +118,8 @@
                          </a>
                        </button> -->
                         </div>
-
-
-
                     </div>
+
                     <div fxLayout="row" fxLayout.xs="column" fxLayout.sm="column" class="reviewalluser">
                         <div class="img-product" fxFlex="70%" fxLayout="row">
                             <div class="heading-productreview">
@@ -149,7 +141,6 @@
                                         <textarea type="textarea" class="rightre"
                                             placeholder="Write your review here..."> </textarea>
                                         <button> Submit</button>
-                                   
                                 </div>
                                 <div class="start" *ngFor="let comm of movie.comments">
                                     <div class="img" fxLayout="row">
@@ -174,10 +165,8 @@
                                 </div>
                             </div>
                         </div>
-
                         <div class="img-product" fxFlex="30%" fxLayout="row">
                           
-
                         </div>
                     </div>
                 </div>
