--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,6 +1,6 @@
 <section *ngIf="!isMobile()" class="home" fxLayout="column" ngClass.xs="amazonhome1" ngClass.sm="amazonhome2"
     ngClass.md="amazonhome3">
-    <div class="category">
+    <div class="category" id="homeFirsttwo">
         <div class="cate-amazon" fxLayout="row" fxLayout.xs="column">
             <div class="cate-img left1" fxFlex="40%" fxFlex.xs="100%" fxFlex.sm="100%">
                 <h1>Amazon Best Seller Fashion Products
@@ -75,7 +75,7 @@
     </div>
 
 
-    <div class="category-featured-amazon">
+    <div class="category-featured-amazon" id="homeFirsttwo">
         <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
             fxFlex.lg="1270px" fxFlex.xl="1910px">
             <div class="heading">
