--- a/src/app/layout/auth/header/header.component.scss
+++ b/src/app/layout/auth/header/header.component.scss
@@ -1,5 +1,5 @@
 section.amazonheader {
-    padding:10px 6px 10px 6px;
+    padding:10px 0px 10px 0px;
     background:linear-gradient(45deg, #c4efe4, #c5f0e5);
     background:#000
 }
@@ -341,3 +341,27 @@ button.mat-focus-indicator.searchfield.mat-menu-item {
 
 
 
+.topicon {
+    position: fixed;
+    right: 7px;
+    bottom: 20px;
+    background: #000;
+    color: #fff;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    display: flex;
+    place-content: center;
+    align-items: center;
+    padding: 0px;
+    cursor: pointer;    text-decoration: none;
+
+}
+.topicon mat-icon {
+    font-size: 17px;
+    text-align: center;
+    display: flex;
+    place-content: center;
+    align-items: center;
+    font-weight: 100;
+}
