--- a/src/app/layout/all-blogs/all-blogs.component.scss
+++ b/src/app/layout/all-blogs/all-blogs.component.scss
@@ -182,3 +182,8 @@ section.home.amazonhome3 .blog-featured p {
     border-radius: 5px;
     padding: 30px 10px 0;
 }
+
+.loader{
+    width: 100%;
+    height: 100%;
+}
