--- a/src/app/layout/all-blogs/all-blogs.component.html
+++ b/src/app/layout/all-blogs/all-blogs.component.html
@@ -11,8 +11,8 @@
             </div>
         </div>
 
-        <div *ngIf="dataload">
-            <img class="loader" src="assets/images/s.gif">
+        <div *ngIf="dataload" class="loaderload">
+            <img class="loader" src="assets/images/loader.gif">
         </div>
 
 
