--- a/src/app/layout/all-movies/all-movies.component.html
+++ b/src/app/layout/all-movies/all-movies.component.html
@@ -3,8 +3,8 @@
     <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
         fxFlex.lg="1270px" fxFlex.xl="1910px">
 
-        <div *ngIf="dataload">
-            <img class="loader" src="assets/images/s.gif">
+        <div *ngIf="dataload" class="loaderload">
+            <img class="loader" src="assets/images/loader.gif">
         </div>
 
 
