--- a/src/app/layout/all-blogs/all-blogs.component.scss
+++ b/src/app/layout/all-blogs/all-blogs.component.scss
@@ -184,6 +184,12 @@ section.home.amazonhome3 .blog-featured p {
 }
 
 .loader{
-    width: 100%;
-    height: 100%;
+    width: 301px;
+    height: auto;
+    padding:8pc 0 11pc;
+    margin: 0 auto;
+    display: block;
+}
+.loaderload{
+    min-height: 100vh;
 }
