--- a/src/app/layout/all-movies/all-movies.component.scss
+++ b/src/app/layout/all-movies/all-movies.component.scss
@@ -81,6 +81,12 @@ h1.Mname::first-letter {
     text-transform: uppercase;
 }
 .loader{
-    width: 100%;
-    height: 100%;
+    width: 301px;
+    height: auto;
+    padding:8pc 0 11pc;
+    margin: 0 auto;
+    display: block;
+}
+.loaderload{
+    min-height: 100vh;
 }
